[package]
name = "spreadsheet-plotter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
clap = { version = "4.5.47", features = ["derive", "help", "wrap_help"] }
csv = "1.3.1"
env_logger = "0.11.8"
getopts = "0.2.23"
log = "0.4.27"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
toml = { version = "0.9.6", features = ["serde"] }
which = "8.0.0"

[build-dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
