[package]
name = "spreadsheet-plotter"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
clap = { version = "4.5.47", features = ["derive", "help", "wrap_help"] }
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.2"
regex = "1.12.2"
sqlformat = "0.5.0"
strum = { version = "0.27.2", features = ["derive"] }
which = "8.0.0"

[build-dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
